data tertagih hanya untuk petugas 7 saja
